2007-12-23  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (parse_char_string): A poor support for error
	line/column reporting is added.  Support for pseudo-element
	and pseudo-class.

2007-12-23  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: New module.

	* SelectorsParser.pm (parse_string): Split into |parse_string|
	and |_parse_selectors_with_tokenizer|.  Support for "end by
	token T" option.  Return the last token as well as the
	parsed selectors pbject.

2007-11-24  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsParser.pm (parse_string): Raise errors if appropriate.

2007-10-28  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsSerializer.pm (serialize_test): Namespace prefix
	IS namespace URI for sorting stability (attribute and :not()
	selectors).

	* selectors-object.en.html: Namespace URI cannot be empty.

2007-10-22  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsSerializer.pm ($ident): Non-ascii name start
	characters after leading |-| was escaped.  An IDENT
	of |-| was not escaped.

2007-10-17  Wakaba  <wakaba@suika.fam.cx>

	* selectors-object.en.html: New documentation.

2007-10-17  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsParser.pod, Makefile: New files.

2007-10-07  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsParser.pm (parse_string): An |IDENT|
	can be specified as the argument for |-manakai-contains|,
	as defined in Selectors CR (2001).

2007-10-07  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsParser.pm (BEFORE_CONTAINS_STRING_STATE): New state.
	(parse_string): Support for |-manakai-current| 
	and |-manakai-contains| pseudo-classes.

	* SelectorsSerializer.pm: Support for |-manakai-current|
	and |-manakai-contains| pseudo-classes.

2007-09-30  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm: |\\{nl}| incorrectly appended |{nl}| to
	the string value of the token.

2007-09-24  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsParser.pm: Pass an empty string as a prefix
	for lookup namespace prefix callback, for loose compatibility
	with the |NSResolver| interface.
