@@ -1,5 +1,9 @@
 2007-12-23  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm: Support for the |@charset| rule.
+
+2007-12-23  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm (parse_char_string): A poor support for error
 	line/column reporting is added.  Support for pseudo-element
 	and pseudo-class.
